<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NotePad</string>
    
    <string name="add_note_button">Add Note</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="no_notes">No Records</string>
	<string name="add_new_tegs">Add new tegs</string>
    
    <string name="next_month">>></string>
    <string name="previos_month">&lt;&lt;</string>
    
    <string name="menu_search_by_teg">Search by teg</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="menu_delete">Delete</string>
    <string name="add_tegs">Add tegs</string>
    <string name="edit_note">Edit Note</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="show_reminder">Show Reminder</string>
    <string name="show_note">Show Note</string>
    
	<string name="stweek">week</string>
	
	<string name="body">Body</string>
	<string name="title">Title</string>	
	
    <string name="created_rec">"Created:  "</string>
    <string name="modifed_rec">"Modified: "</string>
    <string name="time_length">"time length: "</string>
    <string name="all_note">All Notes</string>
    
    
    <string name="delete_note_information">Delete Note(s)</string>
    <string name="delete_note_message">Are you sure you want to delete this note?</string>
    <string name="voice">voice</string>
    
    <string name="unsaved_changes_title">Unsaved Changes</string>
    <string name="unsaved_changes_message">Would you like to save this Note?</string>
    <string name="name_of_new_teg">Enter a name of new teg:</string>
    <string name="discard">Discard</string>
      <string name="start_data">Start data</string>
    <string name="end_data">  End data</string>
    <string name="start_time">Start time</string>
    <string name="end_time">  End time</string>
    <string name="no_signal">No alarm</string>
    <string name="add_signal">Add alarm</string>
    
   <string name="none">None</string>
   <string name="on_time">On time</string>
   <string name="f_min">5 mins before</string>
   <string name="fif_min">15 mins before</string>
   <string name="hour_b">1 hour before</string>
   <string name="day_b">1 day before</string>
   <string name="custom">Customize</string>
   <string name="alarm_">Alarm :</string>
   <string name="tegs_">"Teg: "</string>
   <string name="add_passwod">"Add password "</string>
   <string name="delete_passwod">"Delete password "</string>
   <string name="upload_save">"synch"</string>
   <string name="enter_password_">  Enter password  :</string>
   
   <string name="settings_password2">Password (again):</string>
    <string name="settings_password">Password:</string>
    <string name="settings_pwd_set">Password Set</string>
    <string name="settings_pwd_not_set">No Password Set</string>
    <string name="settings_pwd_not_equal">Passwords do not math, please try again.</string>
    <string name="settings_pwd_equal">Password match</string>
    
    <string name="settings_button_pwd">Set Password</string>
</resources>