<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/button_tegs"
			android:text="@string/add_tegs"/>
		<TextView 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:id="@+id/tegs"/>
	</LinearLayout>
    
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/body" 
		android:inputType="textMultiLine"/>
	<EditText 
	    android:id="@+id/body" 
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:scrollbars="vertical" android:inputType="textMultiLine"/>
	<TextView 
	    android:text="@string/start_data"
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/button_data_beg"
			android:text="@string/start_data"/>
		<Button 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/button_time_beg"
			android:text="@string/start_time"/>
	</LinearLayout>
	<TextView 
	    android:text="@string/end_data"
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<Button 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/button_data_end"
			android:text="@string/end_data"/>
		<Button 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/button_time_end"
			android:text="@string/end_time"/>

	</LinearLayout>

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView 
		    android:id="@+id/signal"
	    	android:text="@string/no_signal"
	    	android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"/>
		<Button 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/add_signal"
			android:text="@string/add_signal"/>
		

	</LinearLayout>
	
	<LinearLayout 
	    android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button 
			android:id="@+id/voice_notes" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/voice"/>
		<Button android:id="@+id/confirm" 
		    android:text="@android:string/ok"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		
		<Button 
		   	android:layout_width="wrap_content" 
		   	android:text="@android:string/cancel" 
		   	android:layout_height="wrap_content" 
		   	android:id="@+id/cancel_button"/>
	</LinearLayout>
</LinearLayout>