<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/title" />
		<EditText android:id="@+id/title" 
		  android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_weight="1" 
			android:inputType="text"
			android:maxLength="30"/>
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/button_tegs"
			android:text="@string/add_tegs"/>
		<TextView 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:id="@+id/tegs"/>
	</LinearLayout>
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/body" 
		android:inputType="textMultiLine"/>
	<EditText 
	    android:id="@+id/body" 
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:scrollbars="vertical" android:inputType="textMultiLine"
		android:maxLength="1000"/>
	<LinearLayout 
	    android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button 
			android:id="@+id/voice_notes" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/voice"/>
		<Button android:id="@+id/confirm" 
		    android:text="@android:string/ok"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		
		<Button 
		   	android:layout_width="wrap_content" 
		   	android:text="@android:string/cancel" 
		   	android:layout_height="wrap_content" 
		   	android:id="@+id/cancel_button"/>
	</LinearLayout>
</LinearLayout>